# private-weather

./: README.md
storage-service/: Cargo.toml  Dockerfile  Makefile  configs.json  docker-compose.yml
storage-service/src/: controllers.rs  main.rs  utils.rs
www/: index.html
